--- a/tinker/templates/admin/redirects/home.html
+++ b/tinker/templates/admin/redirects/home.html
@@ -48,23 +48,18 @@
                         </form>
                     </div>
                 </div>
-
-                <div class="row">
-                    <div class="col-md-12">
-                        <table class="table column-container">
-                            <thead>
-                            <tr>
-                                <th width="25">Info</th>
-                                <th width="200">From Path</th>
-                                <th width="200">To URL</th>
-                                <th width="25">Delete</th>
-                            </tr>
-                            </thead>
-                            <tbody id="redirects-table">
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th>Info</th>
+                        <th>From Path</th>
+                        <th>To URL</th>
+                        <th>Delete</th>
+                    </tr>
+                    </thead>
+                    <tbody id="redirects-table">
+                    </tbody>
+                </table>
                 {# spinner placeholder #}
                 <div id="spinner" class="spinner" style="display:none;">
                     <img id="img-spinner" src="https://cdn1.bethel.edu/images/load.gif" alt="Loading"/>
