--- a/tinker/static/assets/css/tinker.css
+++ b/tinker/static/assets/css/tinker.css
@@ -560,7 +560,26 @@ label {
 }
 
 .table > thead > tr > th, .table > tbody > tr > th, .table > tfoot > tr > th, .table > thead > tr > td, .table > tbody > tr > td, .table > tfoot > tr > td {
-    vertical-align: unset !important;
+    /*vertical-align: unset !important;*/
+}
+
+.table{
+    table-layout: fixed;
+    width: 100%;
+}
+
+.table tbody{
+    word-wrap: break-word;
+}
+
+.table th:nth-child(1),
+.table th:nth-child(4){
+    width: 10%;
+}
+
+.table th:nth-child(2),
+.table th:nth-child(3){
+    width: 40%;
 }
 
 /* Checkbox inputs */
