--- a/tinker/templates/admin/redirects/ajax.html
+++ b/tinker/templates/admin/redirects/ajax.html
@@ -5,14 +5,24 @@
 
         <!-- Info column -->
         <td>
+            {# Checks for timestamp #}
             {% if redirect.timestamp %}
                 {% set data_timestamp = redirect.timestamp %}
             {% else %}
                 {% set data_timestamp = "Before DATE" %}
             {% endif %}
+            {# Checks for short url #}
+            {% if redirect.short_url %}
+                {% set shortURL = "Yes" %}
+            {% else %}
+                {% set shortURL = "No" %}
+            {% endif %}
+
             <div class="info-column clickable" data-reveal-id="confirmModal" data-toggle="modal" data-target="#infoModal"
             data-id="{{ redirect.id }}" data-username="{{ redirect.username }}"
-            data-timestamp="{{ data_timestamp }}" data-exp-date="{{ redirect.expiration_date }}">
+            data-timestamp="{{ data_timestamp }}" data-exp-date="{{ redirect.expiration_date }}"
+             data-from-path="{{ redirect.from_path }}" data-to-url="{{ redirect.to_url }}"
+             data-short-url="{{ shortURL }}">
                 <i class="fa fa-info-circle"></i>
             </div>
         </td>
