Set Date for Production
Timestamp for all redirects created before this date was set.

--- a/tinker/templates/admin/redirects/ajax.html
+++ b/tinker/templates/admin/redirects/ajax.html
@@ -8,7 +8,7 @@
             {% if redirect.timestamp %}
                 {% set data_timestamp = redirect.timestamp %}
             {% else %}
-                {% set data_timestamp = "Before DATE" %}
+                {% set data_timestamp = "Before 2018-03-28" %}
             {% endif %}
             <div class="info-column clickable" data-reveal-id="confirmModal" data-toggle="modal" data-target="#infoModal"
             data-id="{{ redirect.id }}" data-username="{{ redirect.username }}"
