--- a/tinker/templates/admin/redirects/home.html
+++ b/tinker/templates/admin/redirects/home.html
@@ -234,33 +234,38 @@
                     <h4 class="modal-title" id="myModalLabel">Redirect Information</h4>
                 </div>
                 <div class="modal-body">
-                    <div>
-                        <u>ID:</u>
-                        <span id="modal-id-display">No id was loaded</span>
-                    </div>
-                    <div>
-                        <u>Username:</u>
-                        <span id="modal-username-display">No username was loaded</span>
-                    </div>
-                    <div>
-                        <u>Date Created:</u>
-                        <span id="modal-date-display">No timestamp was loaded</span>
-                    </div>
-                    <div>
-                        <u>From Path:</u>
-                        <span id="modal-from-path-display">No from path was loaded</span>
-                    </div>
-                    <div>
-                        <u>To URL:</u>
-                        <span id="modal-to-url-display">No to URL was loaded</span>
-                    </div>
-                    <div>
-                        <u>Short URL:</u>
-                        <span id="modal-short-url-display">No short URL was loaded</span>
-                    </div>
-                    <div>
-                        <u>Expiration Date:</u>
-                        <span id="modal-exp-date-display">No expiration date was loaded</span>
+                    <table class="table">
+                        <tr>
+                            <th>ID:</th>
+                            <td id="modal-id-display">No id was loaded</td>
+                        </tr>
+                        <tr>
+                            <th>Username:</th>
+                            <td id="modal-username-display">No username was loaded</td>
+                        </tr>
+                        <tr>
+                            <th>From Path:</th>
+                            <td id="modal-from-path-display">No from path was loaded</td>
+                        </tr>
+                        <tr>
+                            <th>To URL:</th>
+                            <td id="modal-to-url-display">No to URL was loaded</td>
+                        </tr>
+                        <tr>
+                            <th>Short URL:</th>
+                            <td id="modal-short-url-display">No short URL was loaded</td>
+                        </tr>
+                        <tr>
+                            <th>Date Created:</th>
+                            <td id="modal-date-display">No timestamp was loaded</td>
+                        </tr>
+                        <tr>
+                            <th>Expiration Date:</th>
+                            <td id="modal-exp-date-display">No expiration date was loaded</td>
+                        </tr>
+                    </table>
+                    <div class="edit-btn">
+                        <a class="btn btn-primary">Edit</a>
                     </div>
                 </div>
             </div>
