--- a/tinker/templates/admin/redirects/home.html
+++ b/tinker/templates/admin/redirects/home.html
@@ -92,20 +92,22 @@
                 // Listens for a click to get info on a redirect
                 $(".info-column").on('click',function(){
                     // Displaying data
-                    $("#modal-id-display").text($(this).data('id'));
-                    $("#modal-username-display").text($(this).data("username"));
-                    $("#modal-date-display").text($(this).data("timestamp"));
-                    $("#modal-exp-date-display").text($(this).data("exp-date"));
-                    $("#modal-from-path-display").text($(this).data("from-path"));
-                    $("#modal-to-url-display").text($(this).data("to-url"));
-                    $("#modal-short-url-display").text($(this).data("short-url"));
+                    $("#modal-id-display").text($(this).data('id')).show();
+                    $("#modal-username-display").text($(this).data("username")).show();
+                    $("#modal-date-display").text($(this).data("timestamp")).show();
+                    $("#modal-exp-date-display").text($(this).data("exp-date")).show();
+                    $("#modal-from-path-display").text($(this).data("from-path")).show();
+                    $("#modal-to-url-display").text($(this).data("to-url")).show();
+                    $("#modal-edit-redirect-btn").show();
                     // Hiding edit fields
-                    $("#modal-id-edit").hide();
-                    $("#modal-username-edit").hide();
-                    $("#modal-date-edit").hide();
-                    $("#modal-exp-date-edit").hide();
-                    $("#modal-from-path-edit").hide();
-                    $("#modal-to-url-edit").hide();
+                    $("#modal-id-edit").val($(this).data('id')).hide();
+                    $("#modal-username-edit").val($(this).data('username')).hide();
+                    $("#modal-date-edit").val($(this).data('timestamp')).hide();
+                    $("#modal-exp-date-edit").val($(this).data('exp-date')).hide();
+                    $("#modal-from-path-edit").val($(this).data('from-path')).hide();
+                    $("#modal-to-url-edit").val($(this).data('to-url')).hide();
+                    $("#modal-submit-edits-btn").hide();
+                    $("#modal-cancel-edits-btn").hide();
                 });
             }
 
@@ -201,13 +203,14 @@
                     });
                 });
                 $(".edit-redirect-btn").click(function () {
-                    //Hiding info fields
+                    // Hiding info fields
                     $("#modal-id-display").hide();
                     $("#modal-username-display").hide();
                     $("#modal-date-display").hide();
                     $("#modal-exp-date-display").hide();
                     $("#modal-from-path-display").hide();
                     $("#modal-to-url-display").hide();
+                    $("#modal-edit-redirect-btn").hide();
                     // Showing edit fields and putting in default values
                     $("#modal-id-edit").show();
                     $("#modal-username-edit").show();
@@ -215,6 +218,8 @@
                     $("#modal-exp-date-edit").show();
                     $("#modal-from-path-edit").show();
                     $("#modal-to-url-edit").show();
+                    $("#modal-submit-edits-btn").show();
+                    $("#modal-cancel-edits-btn").show();
                 });
 
             });
@@ -263,7 +268,7 @@
                             <th>ID:</th>
                             <td>
                                 <span id="modal-id-display">No id was loaded</span>
-                                <input type="text" id="modal-id-edit" readonly/>
+                                <input type="text" id="modal-id-edit" value="$(this).data('id')" readonly/>
                             </td>
                         </tr>
                         <tr>
@@ -290,7 +295,13 @@
                         <tr>
                             <th>Short URL:</th>
                             <td>
-                                <span id="modal-short-url-display">No short URL was loaded</span>
+                                <label class="checkbox" for="new-redirect-short-url">
+                                    <span class="icons">
+                                        <span class="first-icon fa fa-square-o"></span>
+                                        <span class="second-icon fa fa-check-square-o"></span>
+                                    </span>
+                                    <input type="checkbox" name="new-redirect-short-url" id="new-redirect-short-url">
+                                </label>
                             </td>
                         </tr>
                         <tr>
@@ -310,6 +321,8 @@
                     </table>
                     <div class="edit-btn">
                         <a id="modal-edit-redirect-btn" class="btn btn-primary edit-redirect-btn">Edit</a>
+                        <a id="modal-submit-edits-btn" class="btn btn-primary">Submit</a>
+                        <a id="modal-cancel-edits-btn" class="btn btn-primary">Cancel</a>
                     </div>
                 </div>
             </div>
@@ -325,6 +338,9 @@
         $(document).ready(function () {
             var picker = new Pikaday({
                 field: document.getElementById('expiration-date')
+            });
+            var picker_edit = new Pikaday({
+                field: document.getElementById('modal-exp-date-edit')
             });
         });
     </script>
