--- a/tinker/templates/admin/redirects/home.html
+++ b/tinker/templates/admin/redirects/home.html
@@ -101,9 +101,14 @@
                     $("#modal-from-path-display").text($(this).data("from-path")).show();
                     $("#modal-to-url-display").text($(this).data("to-url")).show();
                     $("#modal-edit-redirect-btn").show();
-                    //Check or uncheck short url
-                    $('#redirect-short-url').attr('checked', true);
-                    $('#redirect-short-url').parent().addClass('checked');
+                    // Checkbox for short url
+                    $("#modal-short-url-info").show();
+                    $("#modal-short-url-edit").hide();
+                    if($("#modal-short-url-info").data("short-url")){
+                        
+                    }else{
+
+                    }
                     // Hiding edit fields
                     $("#modal-id-edit").val($(this).data('id')).hide();
                     $("#modal-username-edit").val($(this).data('username')).hide();
@@ -226,11 +231,22 @@
                     $("#modal-to-url-edit").show();
                     $("#modal-submit-edits-btn").show();
                     $("#modal-cancel-edits-btn").show();
+                    // Checkbox for short url
+                    $("#modal-short-url-info").hide();
+                    $("#modal-short-url-edit").show();
                 });
 
                 $(".submit-edits-btn").click(function(){
                     // Submit changes
-
+                    var edits = {
+                        'edit-id': $('#modal-id-edit').val(),
+                        'username': $('#modal-username-edit').val(),
+                        'edit-redirect-from': $('#modal-from-path-edit').val(),
+                        'edit-redirect-to': $('#modal-to-url-edit').val(),
+                        'edit-redirect-short-url': $('#edit-redirect-short-url').parent().hasClass('checked'), // This one needs work!
+                        'edit-redirect-date-created': $('#modal-date-edit').val(),
+                        'edit-expiration-date': $('#modal-exp-date-edit').val()
+                    };
                     // Notify changes
                     $.notify({
                         message: 'Your changes have been saved'
@@ -315,12 +331,18 @@
                         <tr>
                             <th>Short URL:</th>
                             <td>
-                                <label class="checkbox" for="redirect-short-url">
+                                <label id="modal-short-url-info" class="checkbox">
+                                    <span class="icons">
+                                        <span class="fa fa-square-o"></span>
+                                        <span class="fa fa-check-square-o"></span>
+                                    </span>
+                                </label>
+                                <label id="modal-short-url-edit" class="checkbox" for="edit-redirect-short-url">
                                     <span class="icons">
                                         <span class="first-icon fa fa-square-o"></span>
                                         <span class="second-icon fa fa-check-square-o"></span>
                                     </span>
-                                    <input type="checkbox" name="redirect-short-url" id="redirect-short-url">
+                                    <input type="checkbox" name="edit-redirect-short-url" id="edit-redirect-short-url">
                                 </label>
                             </td>
                         </tr>
