--- a/tinker/templates/e-announcements/home.html
+++ b/tinker/templates/e-announcements/home.html
@@ -26,7 +26,18 @@
                        class="btn btn-primary new-btn">
                         Upcoming E-Announcements</a>
                 {% endif %}
-                <hr>
+                <br>
+                <select class="horizontal-scroll" size="{{ all_schools|length }}" id="school-selector"
+                        multiple>
+                    {% for school_code, school in all_schools.items() %}
+                        {% if loop.first %}
+                            <option value="{{ school_code }}"
+                                    selected="selected">{{ school }}</option>
+                        {% elif not loop.last %}
+                            <option value="{{ school_code }}">{{ school }}</option>
+                        {% endif %}
+                    {% endfor %}
+                </select>
                 <p class="description">Click "Slide Down" button for additional search parameters.
                     Press "Slide Up" to hide selection</p>
                 <button class="s-up">Slide Up</button>
@@ -41,14 +52,9 @@
                     </small>
                     <label for="e-annz-title">E-Announcement Title:</label>
                     <input id="e-annz-title" type="text" name="E-Annz-Title"><br/>
-                    <small>The Start and End fields are to specify the date range where an e-announcement might fall,
-                        for example "New Years Eve" and "Christmas" would both show up if you started at December 25th
-                        and ended on December 31st
-                    </small>
-                    <label for="startDate">Start Date:</label>
-                    <input id="startDate" class='datepicker' size='11'/>
-                    <label for="endDate">End Date:</label>
-                    <input id="endDate" class='datepicker' size='11'/>
+                    {#                    <small>The date of e-announcement</small>#}
+                    <label for="e-annz-date">E-Announcement Date</label>
+                    <input id="e-annz-date" class='datepicker' size='11'/>
                 </div>
             </div>
 
@@ -61,6 +67,7 @@
                 </div>
                 <br>
                 <br>
+                <div id="results"></div>
 
                 {% for form in forms %}
                     <div class="card">
@@ -106,7 +113,6 @@
                     </div>
                     <hr/>
                 {% endfor %}
-
             </div>
         </div>
     </div>
@@ -140,12 +146,48 @@
 
 {% block scripts %}
 
+    <link rel="stylesheet" href="{{ url_for('static', filename='pikaday.css') }}">
+    <script src="{{ url_for('static', filename='pikaday.js') }}"></script>
+    <script src="{{ url_for('static', filename='pikaday.jquery.js') }}"></script>
+
     {#  Script to update the modal submit to delete the correct form#}
     <script type="text/javascript">
         $(".delete-press").click(function () {
             $("#modal-confirm").attr("href", "/e-announcements/delete/" + $(this).data('e-announcement-id'));
         });
+        $('.datepicker').each(function () {
+            var current_element = $(this);
+            var starting_values = {
+                field: this,
+                format: 'MM DD, YYYY',
+                minDate: new Date('2000-01-01'),
+                maxDate: new Date('2040-12-31'),
+                yearRange: [2000, 2040],
+                disableDayFn: function (date) {
+                    var start_populated = $("#startDate").val();
+                    var end_populated = $("#endDate").val();
+                    if (start_populated == "" && end_populated == "") {
+                        return null;
+                    } else if (start_populated != "" && current_element.attr('id') == 'endDate') {
+                        if (new Date(start_populated) >= date) {
+                            return date;
+                        }
+                    } else if (end_populated != "" && current_element.attr('id') == 'startDate') {
+                        if (new Date(end_populated) <= date) {
+                            return date;
+                        }
+                    }
+                }
+            };
+            // if its the startDate, set default date to today
+            if ($(this).attr('id') == 'startDate') {
+                starting_values['defaultDate'] = new Date();
+                starting_values['setDefaultDate'] = true;
+            }
 
+
+            var picker = new Pikaday(starting_values);
+        });
 
         {#   Search E-ANNZ   #}
 
@@ -154,8 +196,7 @@
             $('#spinner').show();
             inputs = {
                 "title": $("#e-annz-title").val(),
-                "start": $("#startDate").val(),
-                "end": $("#endDate").val(),
+                "date": $("#e-annz-date").val(),
                 "selection": $("#school-selector").val()
             };
             $.ajax({
@@ -180,9 +221,11 @@
                 $("#search-space").hide();
             });
         });
+        $("#e-annz-submit-btn").click(function () {
+            search_e_annz();
+        });
+
 
     </script>
 
 {% endblock %}
-
-
